--- a/jdbc-pratice/build.gradle
+++ b/jdbc-pratice/build.gradle
@@ -10,8 +10,17 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation('com.zaxxer:HikariCP:5.0.1')
+    implementation('org.springframework:spring-jdbc:5.3.23')
+
+    implementation('ch.qos.logback:logback-classic:1.4.1')
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+
+    testImplementation('org.assertj:assertj-core:3.23.1')
+
+    testImplementation('com.h2database:h2:2.1.214')
 }
 
 test {
